# PixelTraq

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  classBrownConrady-members.html  classCamera.js  classCommonMath.html  classGenFTanTheta.html  classGenFTanTheta.js  classGenFTheta-members.html  classGenFTheta.html  classGenFTheta.js  classKannala.html  classPinhole-members.html  classRemapper.js  classUtils-members.html  classes.html  dir_1f362e2f6784f6764b3723d7ee74f51c.html  dir_34519bff5ae72130fe71a8620cbf1fc0.html  dir_46b4ca9cfc9a703c87a0dfe6e2f3cac8.html  dir_74e2e0f74a63b99e2cbc91583859e285.html  functions.html  hierarchy.html  hierarchy.js  index.html  navtreedata.js  navtreeindex0.js
.github/workflows/: doxygen.yml
docs/: classBrownConrady.html  classBrownConrady.js  classCamera-members.html  classCamera.html  classCommonMath-members.html  classGenFTanTheta-members.html  classKannala-members.html  classKannala.js  classPinhole.html  classPinhole.js  classRemapper-members.html  classRemapper.html  classUtils.html  dir_52b4106b6168f13dcdf82e33b1d195ee.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7b5d38f1875f1b693f62ca6a108a1129.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions_func.html  header.html  index.html
docs/latex/: annotated.tex  classBrownConrady.tex  classCamera.eps  classGenFTheta.eps  index.tex
docs/search/: all_1.js  all_12.js  all_4.js  all_9.js  all_c.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_4.js  functions_5.js  functions_7.js  functions_b.js  functions_d.js
include/: pixeltraq.h
include/camera/: brown_conrady.h  camera.h  general_ftan_theta.h  general_ftheta.h  kannala.h  pinhole.h
include/remapper/: remapper.h
include/utilities/: common_math.h  utils.h
latex/: classBrownConrady.eps  classCamera.tex  classCommonMath.tex  classGenFTanTheta.eps  classGenFTanTheta.tex  classGenFTheta.tex  classKannala.eps  classKannala.tex  classPinhole.eps  classPinhole.tex  classRemapper.tex  classUtils.tex  hierarchy.tex  refman.tex
scripts/: CMakeLists.txt
scripts/examples/: CMakeLists.txt  load_save_example.cpp  projection_example.cpp  reconstruction_example.cpp  stereo_rectification_example.cpp  undistortion_example.cpp
scripts/examples/inputs/: H2387815_CameraModel.json  H2395912_CameraModel.json
scripts/tools/: CMakeLists.txt  undistort_image.cpp
search/: all_0.js  all_10.js  all_11.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_e.js  functions_f.js  pages_0.js  searchdata.js
src/: CMakeLists.txt
src/camera/: CMakeLists.txt  brown_conrady.cpp  camera.cpp  general_ftan_theta.cpp  general_ftheta.cpp  kannala.cpp  pinhole.cpp
src/remapper/: CMakeLists.txt  remapper.cpp
src/utilities/: CMakeLists.txt  common_math.cpp  utils.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/include/: test_camera_classes.h
tests/src/: brown_conrady_test.cpp  camera_test.cpp  commonmath_test.cpp  kannala_test.cpp  pinhole_test.cpp  remapper_test.cpp  test_camera_classes.cpp
tests/test_inputs/: brown_conrady.json  brown_conrady_RGB.json  different_class.json  invalid_brownConrady.json  invalid_pinhole.json  kannala_full.json  kannala_radial.json  pinhole.json  pinhole_RGB.json  valid_model.json  valid_pinhole.json
